# oxifaster

./: .gitignore  BINARY_COMPATIBILITY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV.md  LICENSE  README.cn.md  README.md  SECURITY.md  perf-opt-a4cabed.patch
.claude/: settings.local.json
.github/workflows/: ci.yml  coverage.yml
benches/: common_profiler.rs  index_overflow.rs  index_overflow_concurrent.rs  ycsb.rs
docs/: COMPLETION_REPORT.md  ROADMAP.md  TODO_phase2_cpr_completion.md  TODO_phase3_fasterlog_enhancements.md  TODO_phase4_background_flush.md  fasterlog_format.md  fuzz_tests.md  implementation_status.md  public_api_examples.md  workstreams_review.md
docs/plans/: 2026-03-09-cpr-checkpoint-completion-design.md  2026-03-09-cpr-checkpoint-implementation.md  2026-03-09-f2-batch1-correctness.md  2026-03-09-f2-engine-improvement-design.md  2026-03-11-f2-batch2-core-features.md
docs/superpowers/plans/: 2026-03-15-f2-batch1-review-fixes.md  2026-03-15-pr11-review-fixes.md
docs/superpowers/specs/: 2026-03-15-f2-batch1-review-fixes-design.md  2026-03-15-pr11-review-fixes-design.md
examples/: async_operations.rs  basic_kv.rs  checkpoint_recovery.rs  cold_index.rs  compaction.rs  concurrent_access.rs  config_store.rs  custom_types.rs  epoch_protection.rs  f2_hot_cold.rs  f2_perf_profile.rs  faster_log.rs  incremental_checkpoint.rs  index_growth.rs  io_uring.rs  log_scan.rs  ops_self_check.rs  perf_profile.rs  prometheus_metrics.rs  read_cache.rs  statistics.rs  variable_length.rs
examples/util/: mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fasterkv_public_api.rs
scripts/: bench-ycsb-median.sh  check-bench.sh  check-build.sh  check-clippy.sh  check-coverage.sh  check-examples.sh  check-fmt.sh  check-fuzz.sh  check-miri.sh  check-test-all-features.sh  check-test.sh  ci.sh  install-hooks.sh
scripts/hooks/: pre-commit
src/: address.rs  checkpoint.rs  config.rs  lib.rs  ops.rs  record.rs  status.rs  utility.rs
src/allocator/: hybrid_log.rs  mod.rs  page_allocator.rs
src/allocator/hybrid_log/: auto_flush.rs  checkpoint.rs  delta.rs  flush.rs  flush_worker.rs  tests.rs
src/buffer_pool/: aligned_pool.rs  mod.rs
src/cache/: config.rs  mod.rs  read_cache.rs  record_info.rs  stats.rs
src/checkpoint/: binary_format.rs  locks.rs  mod.rs  recovery.rs  serialization.rs  sidecar.rs  state.rs
src/codec/: bincode.rs  bytes.rs  hash.rs  mod.rs  multi_hash.rs
src/compaction/: auto_compact.rs  compact.rs  concurrent.rs  contexts.rs  mod.rs
src/delta_log/: entry.rs  iterator.rs  log.rs  mod.rs
src/device/: file_device.rs  io_uring.rs  io_uring_common.rs  io_uring_linux.rs  io_uring_mock.rs  mod.rs  null_device.rs  traits.rs
src/epoch/: light_epoch.rs  mod.rs
src/f2/: bloom.rs  config.rs  mod.rs  state.rs  store.rs
src/f2/store/: internal_store.rs  key_access.rs  kv_ops.rs  log_compaction.rs  read_router.rs  store_index.rs  tests.rs  types.rs
src/format/: detector.rs  header.rs  mod.rs
src/gc/: gc_state.rs  mod.rs
src/index/: cold_index.rs  grow.rs  hash_bucket.rs  hash_table.rs  mem_index.rs  mod.rs  profile.rs
src/index/hash_bucket/: tests.rs
src/index/mem_index/: checkpoint.rs  grow.rs  ops.rs  overflow.rs  tests.rs
src/log/: faster_log.rs  faster_log_tests.rs  format.rs  inspect.rs  io.rs  mod.rs  types.rs
src/scan/: log_iterator.rs  mod.rs
src/scan/log_iterator/: tests.rs
src/stats/: collector.rs  metrics.rs  mod.rs  prometheus.rs  reporter.rs
src/store/: async_session.rs  contexts.rs  faster_kv.rs  mod.rs  pending_io.rs  record_format.rs  session.rs  state_transitions.rs
src/store/faster_kv/: auto_flush.rs  checkpoint.rs  compaction.rs  cpr.rs  index_grow.rs  pending_io_support.rs  tests.rs
src/store/faster_kv/tests/: part1.rs  part2.rs
src/varlen/: mod.rs  span_byte.rs  traits.rs
tests/: async_session.rs  auto_compaction.rs  basic_ops.rs  checkpoint.rs  checkpoint_concurrent.rs  checkpoint_concurrent_robust.rs  checkpoint_crash.rs  checkpoint_durability.rs  checkpoint_integrity.rs  checkpoint_locks.rs  checkpoint_serial_numbers.rs  checkpoint_wait_pending.rs  codec_bincode.rs  cold_index.rs  compaction.rs  compatibility.rs  conditional_insert.rs  coverage_compaction.rs  coverage_epoch_delta.rs  coverage_log_scan.rs  coverage_near80.rs  coverage_phase1.rs  coverage_store.rs  coverage_store_internal.rs  cpr_checkpoint_under_load.rs  cpr_integration.rs  device_failure.rs  f2.rs  f2_alignment.rs  faster_log.rs  fuzz_async.rs  fuzz_concurrent.rs  fuzz_kv.rs  fuzz_kv_pending.rs  fuzz_kv_varlen.rs  fuzz_log.rs  fuzz_ops.rs  fuzz_types.rs  guid_byteorder_test.rs  hash.rs  (+17 more)
tests/common/: mod.rs
tests/compatibility/: test_checkpoint_format.rs  test_f2.rs  test_format_detection.rs  test_hash.rs  test_hash_index.rs  test_record_format.rs  test_roundtrip.rs  test_span_byte.rs
tests/coverage_epoch_delta/: part1.rs  part2.rs
tests/coverage_log_scan/: part1.rs  part2.rs  part3.rs
tests/coverage_near80/: part1.rs  part2.rs
tests/coverage_store/: part1.rs  part2.rs  part3.rs
tests/coverage_store_internal/: part1.rs  part2.rs  part3.rs
tests/fuzz_util/: mod.rs
tools/: faster_cpp_demo.cpp  format_inspector.rs  interop_index_tool.rs  run_interop_flows.sh  verify_compatibility.rs
