[package]
name = "oxifaster"
version = "0.1.0"
edition = "2021"
rust-version = "1.92.0"
authors = ["oxifaster contributors"]
description = "A high-performance concurrent key-value store and log engine in Rust"
license = "MIT"
repository = "https://github.com/wayslog/oxifaster"
keywords = ["kv-store", "database", "concurrent", "log", "storage"]
categories = ["database", "data-structures", "concurrency"]

[features]
default = []
statistics = []
io_uring = ["dep:io-uring"]

[dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
crossbeam-utils = "0.8"
parking_lot = "0.12"
bytes = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
pin-project-lite = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6", optional = true }
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
rand = "0.8"
tokio-test = "0.4"
rayon = "1.10"

[[bench]]
name = "ycsb"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

[lints.rust]
warnings = "deny"
