[package]
name = "oxifaster"
version = "0.1.3"
edition = "2024"
rust-version = "1.92.0"
authors = ["oxifaster contributors"]
description = "A high-performance concurrent key-value store and log engine in Rust"
license = "MIT"
repository = "https://github.com/wayslog/oxifaster"
keywords = ["kv-store", "database", "concurrent", "log", "storage"]
categories = ["database", "data-structures", "concurrency"]

[features]
default = ["hash-xxh3"]
statistics = []
prometheus = []
io_uring = ["dep:io-uring"]
hash-xxh3 = ["dep:xxhash-rust", "xxhash-rust/xxh3"]
hash-xxh64 = ["dep:xxhash-rust", "xxhash-rust/xxh64"]
f2 = []
# Internal-only instrumentation for index hot paths. Not enabled by default.
index-profile = []

[dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
crossbeam-utils = "0.8"
parking_lot = "0.12"
bytes = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
pin-project-lite = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"
bytemuck = { version = "1", features = ["derive"] }
xxhash-rust = { version = "0.8", optional = true, default-features = false }
clap = { version = "4", features = ["derive"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6", optional = true }
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
rand = "0.8"
tokio-test = "0.4"
rayon = "1.10"
loom = "0.7"

[[bench]]
name = "ycsb"
harness = false

[[bench]]
name = "index_overflow"
harness = false

[[bench]]
name = "index_overflow_concurrent"
harness = false

[[bin]]
name = "format_inspector"
path = "tools/format_inspector.rs"
required-features = ["clap"]

[[bin]]
name = "verify_compatibility"
path = "tools/verify_compatibility.rs"
required-features = ["clap"]

[[bin]]
name = "interop_index_tool"
path = "tools/interop_index_tool.rs"
required-features = ["clap"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

[lints.rust]
warnings = "deny"
