[package]
name = "oxifaster-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxifaster]
path = ".."

[[bin]]
name = "fasterkv_public_api"
path = "fuzz_targets/fasterkv_public_api.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
